repairnator.maven.buildproject.log
/root/workspace/spring-projects/spring-data-commons/279460664/src/test/java/org/springframework/data/repository/core/support/EventPublishingRepositoryProxyPostProcessorUnitTests.java:269: error: cannot find symbol
		@Getter(onMethod = @__(@DomainEvents)) Collection<? extends Object> events;
		                    ^
  symbol:   class __
  location: class MultipleEvents
/root/workspace/spring-projects/spring-data-commons/279460664/src/test/java/org/springframework/data/repository/core/support/EventPublishingRepositoryProxyPostProcessorUnitTests.java:274: error: cannot find symbol
		@Getter(onMethod = @__(@DomainEvents)) final Collection<? extends Object> events;
		                    ^
  symbol:   class __
  location: class EventsWithClearing
/root/workspace/spring-projects/spring-data-commons/279460664/src/test/java/org/springframework/data/repository/core/support/EventPublishingRepositoryProxyPostProcessorUnitTests.java:282: error: cannot find symbol
		@Getter(onMethod = @__(@DomainEvents)) Object event;
		                    ^
  symbol:   class __
  location: class OneEvent
3 errors
arget/classes
[INFO] /root/workspace/spring-projects/spring-data-commons/279460664/src/main/java/org/springframework/data/repository/config/RepositoryConfigurationExtensionSupport.java: Some input files use or override a deprecated API.
[INFO] /root/workspace/spring-projects/spring-data-commons/279460664/src/main/java/org/springframework/data/repository/config/RepositoryConfigurationExtensionSupport.java: Recompile with -Xlint:deprecation for details.
[INFO] /root/workspace/spring-projects/spring-data-commons/279460664/src/main/java/org/springframework/data/domain/AbstractAggregateRoot.java: /root/workspace/spring-projects/spring-data-commons/279460664/src/main/java/org/springframework/data/domain/AbstractAggregateRoot.java uses unchecked or unsafe operations.
[INFO] /root/workspace/spring-projects/spring-data-commons/279460664/src/main/java/org/springframework/data/domain/AbstractAggregateRoot.java: Recompile with -Xlint:unchecked for details.
[INFO] 
[INFO] --- apt-maven-plugin:1.1.3:test-process (default) @ spring-data-commons ---
[INFO] 
[INFO] --- maven-resources-plugin:2.6:testResources (default-testResources) @ spring-data-commons ---
[INFO] Using 'UTF-8' encoding to copy filtered resources.
[INFO] Copying 11 resources
[INFO] 
[INFO] --- kotlin-maven-plugin:1.1.50:test-compile (test-compile) @ spring-data-commons ---
[INFO] Kotlin version 1.1.50 (JRE 1.8.0_121-8u121-b13-1~bpo8+1-b13)
[INFO] Compiling Kotlin sources from [/root/workspace/spring-projects/spring-data-commons/279460664/src/test/kotlin, /root/workspace/spring-projects/spring-data-commons/279460664/src/test/java]
[INFO] Module name is spring-data-commons
[WARNING] /root/workspace/spring-projects/spring-data-commons/279460664/src/test/kotlin/org/springframework/data/convert/KotlinClassGeneratingEntityInstantiatorUnitTests.kt: (51, 12) Expected type does not accept nulls in Kotlin, but the value may be null in Java
[WARNING] /root/workspace/spring-projects/spring-data-commons/279460664/src/test/kotlin/org/springframework/data/convert/KotlinClassGeneratingEntityInstantiatorUnitTests.kt: (70, 12) Expected type does not accept nulls in Kotlin, but the value may be null in Java
[WARNING] /root/workspace/spring-projects/spring-data-commons/279460664/src/test/kotlin/org/springframework/data/mapping/context/TypeCreatingSyntheticClass.kt: (24, 12) Parameter 'args' is never used
[WARNING] /root/workspace/spring-projects/spring-data-commons/279460664/src/test/kotlin/org/springframework/data/mapping/model/PreferredConstructorDiscovererUnitTests.kt: (35, 25) Expected type does not accept nulls in Kotlin, but the value may be null in Java
[WARNING] /root/workspace/spring-projects/spring-data-commons/279460664/src/test/kotlin/org/springframework/data/mapping/model/PreferredConstructorDiscovererUnitTests.kt: (43, 25) Expected type does not accept nulls in Kotlin, but the value may be null in Java
[WARNING] /root/workspace/spring-projects/spring-data-commons/279460664/src/test/kotlin/org/springframework/data/mapping/model/PreferredConstructorDiscovererUnitTests.kt: (51, 25) Expected type does not accept nulls in Kotlin, but the value may be null in Java
[WARNING] /root/workspace/spring-projects/spring-data-commons/279460664/src/test/kotlin/org/springframework/data/mapping/model/PreferredConstructorDiscovererUnitTests.kt: (59, 25) Expected type does not accept nulls in Kotlin, but the value may be null in Java
[WARNING] /root/workspace/spring-projects/spring-data-commons/279460664/src/test/kotlin/org/springframework/data/mapping/model/PreferredConstructorDiscovererUnitTests.kt: (67, 25) Expected type does not accept nulls in Kotlin, but the value may be null in Java
[WARNING] /root/workspace/spring-projects/spring-data-commons/279460664/src/test/kotlin/org/springframework/data/mapping/model/PreferredConstructorDiscovererUnitTests.kt: (75, 25) Expected type does not accept nulls in Kotlin, but the value may be null in Java
[WARNING] /root/workspace/spring-projects/spring-data-commons/279460664/src/test/kotlin/org/springframework/data/mapping/model/PreferredConstructorDiscovererUnitTests.kt: (103, 34) Parameter 'lastname' is never used
[WARNING] /root/workspace/spring-projects/spring-data-commons/279460664/src/test/kotlin/org/springframework/data/mapping/model/PreferredConstructorDiscovererUnitTests.kt: (109, 34) Parameter 'lastname' is never used
[WARNING] /root/workspace/spring-projects/spring-data-commons/279460664/src/test/kotlin/org/springframework/data/mapping/model/PreferredConstructorDiscovererUnitTests.kt: (118, 68) Parameter 'age' is never used
[WARNING] /root/workspace/spring-projects/spring-data-commons/279460664/src/test/kotlin/org/springframework/data/mapping/model/TypeCreatingSyntheticClass.kt: (24, 12) Parameter 'args' is never used
[WARNING] /root/workspace/spring-projects/spring-data-commons/279460664/src/test/kotlin/org/springframework/data/util/TypeCreatingSyntheticClass.kt: (24, 12) Parameter 'args' is never used
[INFO] 
[INFO] --- maven-compiler-plugin:3.6.1:testCompile (java-test-compile) @ spring-data-commons ---
[INFO] Changes detected - recompiling the module!
[INFO] Compiling 259 source files to /root/workspace/spring-projects/spring-data-commons/279460664/target/test-classes
[INFO] /root/workspace/spring-projects/spring-data-commons/279460664/src/test/java/org/springframework/data/repository/cdi/CdiRepositoryBeanUnitTests.java: Some input files use or override a deprecated API.
[INFO] /root/workspace/spring-projects/spring-data-commons/279460664/src/test/java/org/springframework/data/repository/cdi/CdiRepositoryBeanUnitTests.java: Recompile with -Xlint:deprecation for details.
[INFO] /root/workspace/spring-projects/spring-data-commons/279460664/src/test/java/org/springframework/data/mapping/model/AnnotationBasedPersistentPropertyUnitTests.java: Some input files use unchecked or unsafe operations.
[INFO] /root/workspace/spring-projects/spring-data-commons/279460664/src/test/java/org/springframework/data/mapping/model/AnnotationBasedPersistentPropertyUnitTests.java: Recompile with -Xlint:unchecked for details.
[INFO] 
[INFO] --- maven-surefire-plugin:2.19.1:test (default-test) @ spring-data-commons ---
[INFO] Tests are skipped.
[INFO] 
[INFO] --- maven-jar-plugin:3.0.2:jar (default-jar) @ spring-data-commons ---
[INFO] Building jar: /root/workspace/spring-projects/spring-data-commons/279460664/target/spring-data-commons-2.0.0.BUILD-SNAPSHOT.jar
[INFO] 
[INFO] >>> maven-source-plugin:3.0.1:jar (attach-sources) > generate-sources @ spring-data-commons >>>
[INFO] 
[INFO] --- maven-enforcer-plugin:1.4.1:enforce (enforce-rules) @ spring-data-commons ---
[INFO] Skipping Rule Enforcement.
[INFO] 
[INFO] <<< maven-source-plugin:3.0.1:jar (attach-sources) < generate-sources @ spring-data-commons <<<
[INFO] 
[INFO] --- maven-source-plugin:3.0.1:jar (attach-sources) @ spring-data-commons ---
[INFO] Building jar: /root/workspace/spring-projects/spring-data-commons/279460664/target/spring-data-commons-2.0.0.BUILD-SNAPSHOT-sources.jar
[INFO] 
[INFO] --- maven-install-plugin:2.4:install (default-install) @ spring-data-commons ---
[INFO] Installing /root/workspace/spring-projects/spring-data-commons/279460664/target/spring-data-commons-2.0.0.BUILD-SNAPSHOT.jar to /root/./workspace/spring-projects/spring-data-commons/279460664/.m2/org/springframework/data/spring-data-commons/2.0.0.BUILD-SNAPSHOT/spring-data-commons-2.0.0.BUILD-SNAPSHOT.jar
[INFO] Installing /root/workspace/spring-projects/spring-data-commons/279460664/pom.xml to /root/./workspace/spring-projects/spring-data-commons/279460664/.m2/org/springframework/data/spring-data-commons/2.0.0.BUILD-SNAPSHOT/spring-data-commons-2.0.0.BUILD-SNAPSHOT.pom
[INFO] Installing /root/workspace/spring-projects/spring-data-commons/279460664/target/spring-data-commons-2.0.0.BUILD-SNAPSHOT-sources.jar to /root/./workspace/spring-projects/spring-data-commons/279460664/.m2/org/springframework/data/spring-data-commons/2.0.0.BUILD-SNAPSHOT/spring-data-commons-2.0.0.BUILD-SNAPSHOT-sources.jar
[INFO] ------------------------------------------------------------------------
[INFO] BUILD SUCCESS
[INFO] ------------------------------------------------------------------------
[INFO] Total time: 48.572 s
[INFO] Finished at: 2018-12-10T13:43:41+01:00
[INFO] Final Memory: 83M/1638M
[INFO] ------------------------------------------------------------------------
